started working on display components

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,6 +4,16 @@
 * {
     font-family: Satoshi, Inter, Avenir, Helvetica, Arial, sans-serif;
 }
+
+:root {
+	font-family: Satoshi, Inter, Avenir, Helvetica, Arial, sans-serif;
+}
+
 body {
+    font-family: Satoshi, Inter, Avenir, Helvetica, Arial, sans-serif;
     margin: 0px !important;
+}
+
+.container-fluid {
+    width: 100%;
 }
